@@ -44,3 +44,9 @@ Changed: 20161110172739, Changed by: Sander Fagerland Sandøy, Original value: :
 Changed: 20161110172757, Changed by: null, Original value: : DAL.Transactions, New value: null, Event type: Create
 Changed: 20161110172908, Changed by: null, Original value: : System.Data.Entity.DynamicProxies.Transactions_A4CD73BA524E87DACA215A07D3A8AF912CDAC75F244C9F25A97A7FA77F631EFA, New value: null, Event type: Delete
 Changed: 20161111115312, Changed by: Sander Fagerland Sandøy, Original value: : DAL.Accounts, New value: null, Event type: Create
+Changed: 20161111123112, Changed by: Sander Fagerland Sandøy, Original value: : System.Data.Entity.DynamicProxies.Customers_076C6AFA36CB565926D89CCD837B9176C744EB6330D1981ABC81BC56E17D891F, New value: Model.CustomerInfo, Event type: Update
+Changed: 20161111125109, Changed by: Sander Fagerland Sandøy, Original value: : System.Data.Entity.DynamicProxies.Customers_076C6AFA36CB565926D89CCD837B9176C744EB6330D1981ABC81BC56E17D891F, New value: Model.CustomerInfo, Event type: Update
+Changed: 20161111125143, Changed by: Sander Fagerland Sandøy, Original value: : System.Data.Entity.DynamicProxies.Customers_076C6AFA36CB565926D89CCD837B9176C744EB6330D1981ABC81BC56E17D891F, New value: Model.CustomerInfo, Event type: Update
+Changed: 20161111125549, Changed by: Sander Fagerland Sandøy, Original value: : DAL.Customers, New value: null, Event type: Create
+Changed: 20161111125606, Changed by: Sander Fagerland Sandøy, Original value: : System.Data.Entity.DynamicProxies.Customers_076C6AFA36CB565926D89CCD837B9176C744EB6330D1981ABC81BC56E17D891F, New value: Model.CustomerInfo, Event type: Update
+Changed: 20161111125639, Changed by: null, Original value: : j0SCjWN7eLJ44Cplm8TYhr0gpsNNIXxOLDaOpgJw80c=, New value: Steinåsen4, Event type: Update
